<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/user" />

    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/title"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/body"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnObtener"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/obtener" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizar" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limpiar" />
</LinearLayout>


